--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^1.10.0
   cloud_firestore: ^3.1.0
   firebase_auth: "^3.2.0"
+  uuid: ^3.0.5
+  decimal: ^1.5.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
