--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: "^3.2.0"
   uuid: ^3.0.5
   decimal: ^1.5.0
+  material_floating_search_bar: ^0.3.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
