--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: "^3.2.0"
   uuid: ^3.0.5
   decimal: ^1.5.0
+  flutter_stripe: ^2.0.2
+  http: ^0.13.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
