--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   decimal: ^1.5.0
   flutter_stripe: ^2.0.2
   http: ^0.13.4
+  flutter_credit_card: ^3.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
